<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcvMainDetails"
        style="@style/CardTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        app:layout_constraintBottom_toTopOf="@+id/tvUsernameLabelMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvServerUrlLabelMain"
                style="@style/CardViewHeadingStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/portrait_regular_margin"
                android:layout_marginTop="@dimen/portrait_regular_margin"
                android:layout_marginEnd="@dimen/portrait_regular_margin"
                android:layout_marginBottom="@dimen/portrait_label_field_margin"
                android:text="@string/main_activity_server_url_label"
                app:layout_constraintBottom_toTopOf="@+id/tvServerUrlMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvServerUrlMain"
                style="@style/TextServerUrlStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/portrait_regular_margin"
                android:layout_marginTop="@dimen/portrait_label_field_margin"
                android:layout_marginEnd="@dimen/portrait_regular_margin"
                app:layout_constraintBottom_toTopOf="@+id/tvUserStateLabelMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvServerUrlLabelMain" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserStateLabelMain"
                style="@style/CardViewHeadingStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/portrait_regular_margin"
                android:layout_marginTop="@dimen/portrait_regular_margin"
                android:layout_marginEnd="@dimen/portrait_regular_margin"
                android:layout_marginBottom="@dimen/portrait_label_field_margin"
                android:text="@string/main_activity_current_user_state_label"
                app:layout_constraintBottom_toTopOf="@+id/tvUserStateMain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvServerUrlMain" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUserStateMain"
                style="@style/CardViewSubHeadingStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/portrait_regular_margin"
                android:layout_marginTop="@dimen/portrait_label_field_margin"
                android:layout_marginEnd="@dimen/portrait_regular_margin"
                android:layout_marginBottom="@dimen/portrait_regular_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUserStateLabelMain" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsernameLabelMain"
        style="@style/SecondaryHeadingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_regular_margin"
        android:layout_marginEnd="@dimen/portrait_label_field_margin"
        android:layout_marginBottom="@dimen/portrait_regular_margin"
        android:text="@string/main_activity_username_label"
        app:layout_constraintBottom_toTopOf="@+id/tvLastSyncTimeLabelMain"
        app:layout_constraintEnd_toStartOf="@+id/tvUsernameMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcvMainDetails" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsernameMain"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_label_field_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        app:layout_constraintBottom_toBottomOf="@+id/tvUsernameLabelMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUsernameLabelMain"
        app:layout_constraintTop_toTopOf="@+id/tvUsernameLabelMain" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastSyncTimeLabelMain"
        style="@style/HeadingStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_regular_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        android:layout_marginBottom="@dimen/portrait_label_field_margin"
        android:text="@string/main_activity_last_synced_time_label"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/tvLastSyncTimeMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameLabelMain" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastSyncTimeMain"
        style="@style/TextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_label_field_margin"
        android:layout_marginEnd="@dimen/portrait_regular_margin"
        android:layout_marginBottom="@dimen/portrait_regular_margin"
        android:text="@string/last_sync_not_available"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastSyncTimeLabelMain" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignInMain"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/portrait_regular_margin"
        android:text="@string/drawer_sign_in_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastSyncTimeMain"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>
