<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppBarStyle"
        app:elevation="0dp"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            style="@style/AppBarLabelStyle"
            app:navigationIcon="@drawable/ic_arrow_back_36px">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal"
                />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="17dp"
            android:text="Server URL"
            app:layout_constraintBottom_toTopOf="@+id/inputServerUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/HeadingStyle"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputServerUrl"
            style="@style/TextInputTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/portrait_regular_margin"
            android:layout_marginTop="56dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.208"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextServerUrl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_server_url"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdateServerUrl"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/portrait_regular_margin"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/portrait_label_field_margin"
            android:text="@string/update_url"
            app:elevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/btnChooseDefaultServer"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputServerUrl"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseDefaultServer"
            style="@style/ButtonStyleSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/portrait_label_field_margin"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/portrait_regular_margin"
            android:text="@string/choose_demo_server"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnUpdateServerUrl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnUpdateServerUrl"
            app:layout_constraintTop_toTopOf="@+id/btnUpdateServerUrl"
            app:strokeColor="@color/btn_background"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvUpdateServerUrl"
            style="@style/CardTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/portrait_regular_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnUpdateServerUrl"
            app:layout_constraintVertical_bias="0.2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnVerifyServerUpdateServerDetails"
                    style="@style/OutlinedButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/portrait_secondary_margin"
                    android:text="@string/verify_server_details"
                    app:layout_constraintBottom_toTopOf="@+id/btnScanQrUpdateServerDetails"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnScanQrUpdateServerDetails"
                    style="@style/ButtonStyleDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/portrait_secondary_margin"
                    android:layout_marginEnd="@dimen/portrait_secondary_margin"
                    android:layout_marginBottom="@dimen/portrait_secondary_margin"
                    android:text="@string/scan_qr"
                    app:icon="@drawable/ic_qr_code"
                    app:iconTint="@color/colorPrimaryText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnVerifyServerUpdateServerDetails"
                    tools:ignore="TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
