...
    <string name="app_name">ODK-X Services</string>

    <string name="services_notice">ODK-X Services provides database, file access, and data synchronization services to all ODK-X applications.</string>
    <string name="action_admin_settings">Admin Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sync">Sync</string>
    <!--<string name="action_logout">Logout</string>-->
    <string name="action_change_user">Change User/Logout</string>
    <string name="action_resolve_conflict">Resolve Conflicts</string>
    <string name="action_verify_server_settings">Update User Permissions</string>

    <!-- Checkpoint and Conflict Resolution Stuff -->
...
    <string name="drawer_item_sign_in">Sign in</string>
    <string name="drawer_item_about_us">About ODK-X</string>
    <string name="drawer_item_docs">ODK-X Docs</string>

    <string name="authenticated_user">Authenticated User</string>
    <string name="anonymous_user">Anonymous</string>
    <string name="logged_out">Logged Out</string>
    <string name="enter_server_url">Enter Server URL</string>
    <string name="update_url">Update Url</string>
    <string name="choose_demo_server">Choose Demo Server</string>
    <string name="verify_server_details">Verify Server Details</string>
    <string name="scan_qr">Scan QR</string>
    <string name="enter_password">Password</string>
...
